[project]
name = "helmupdater"
version = "0.1.0"
description = ""
authors = [{ name = "Vladimir Pouzanov", email = "farcaller@gmail.com" }]

requires-python = ">=3.10,<4.0"
dependencies = [
  "chevron>=0.14.0,<0.15.0",
  "pyyaml>=6.0,<7.0",
  "requests>=2.28.2,<3.0",
  "semver>=2.13.0,<3.0",
  "typer>=0.7.0,<0.8.0",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
helmupdater = "helmupdater:app"
