[project]
name = "helmupdater"
version = "0.1.0"
description = ""
authors = [{ name = "Vladimir Pouzanov", email = "farcaller@gmail.com" }]

requires-python = ">=3.10,<4.0"
dependencies = [
  "chevron>=0.14.0,<0.15.0",
  "pyyaml>=6.0,<7.0",
  "requests>=2.32.2,<3.0",
  "semver>=3.0.4,<3.1",
  "typer>=0.20,<0.21",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
  "pytest>=7.0,<8.0",
  "pytest-cov>=4.0,<5.0",
]

[project.scripts]
helmupdater = "helmupdater:app"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # Pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]
